# rustykeen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.riced.sample.toml  Cargo.sample.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  dhat-heap.json  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: OPTIMIZATION_ROADMAP.md  OPTIMIZATION_ROADMAP_FINAL.md  OPTIMIZATION_SUMMARY_2026.md  PHASE5_PGO_ANALYSIS.md  PTS_INTEGRATION_SUMMARY.md  README.md  android_build.md  android_rust_state.md  api_stability.md  architecture.md  benchmark_baselines.md  build.rs  cargo_mobile2.md  checklist.md  cleanroom_plan.md  cleanroom_policy.md  cnf_templates.md  corpus.md  crate_audit_list.md  crate_feature_plan.md  crates_audit.md  dependencies.md  dependency_audit.md  dependency_matrix.md  design.md  design_rationale.md  dev_workflow.md  difficulty.md  difficulty_grading_design.md  distilled_corpus.md  dlx_mapping.md  domain_representation_analysis.md  domain_representation_selection.md  engineering.md  exact_cover_matrix.md  feature_gating.md  features.md  formal_verification.md  global_allocator.rs  implementation.md  (+47 more)
docs/adr/: 0001-ruleset-cage-semantics.md  0002-puzzle-formats.md  0003-determinism-and-rng.md  0004-crate-layout-and-naming.md  README.md  template.md
docs/book/: README.md  book.toml
docs/book/src/: SUMMARY.md  architecture.md  cleanroom.md  crates.md  overview.md  performance.md  verification.md
examples/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
examples/android/app/: build.gradle.kts  proguard-rules.pro
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/kotlin/com/example/kenken/: KeenApi.kt  MainActivity.kt  PuzzleViewModel.kt
examples/android/app/src/main/res/layout/: activity_main.xml
examples/android/app/src/main/res/values/: strings.xml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_sgt_desc_parser.rs  fuzz_solver.rs
kenken-cli/: Cargo.toml
kenken-cli/src/: main.rs
kenken-core/: Cargo.toml  README.md
kenken-core/src/: domain.rs  error.rs  format.rs  lib.rs  puzzle.rs  rules.rs
kenken-core/src/format/: sgt_desc.rs
kenken-core/tests/: prop_cage_semantics.rs
kenken-gen/: Cargo.toml  README.md
kenken-gen/src/: generator.rs  lib.rs  minimizer.rs  seed.rs
kenken-io/: Cargo.toml  README.md
kenken-io/src/: error.rs  lib.rs  rkyv_snapshot.rs
kenken-simd/: Cargo.toml
kenken-simd/src/: lib.rs
kenken-solver/: Cargo.toml  README.md
kenken-solver/benches/: domain_repr.rs  lcv_measurement.rs  profile_flames.rs  simd_effectiveness.rs  solver_scaling.rs  solver_smoke.rs
kenken-solver/benches/common/: corpus.rs  mod.rs
kenken-solver/examples/: test_new_puzzles.rs  test_profile_puzzles.rs
kenken-solver/src/: dlx.rs  dlx_latin.rs  domain_fixedbitset.rs  domain_ops.rs  domain_simd128.rs  domain_simd256.rs  domain_smallbitvec.rs  error.rs  hints.rs  lib.rs  nogood.rs  parallel.rs  sat_cages.rs  sat_common.rs  sat_latin.rs  solver.rs  symmetry.rs  z3_verify.rs
kenken-solver/tests/: corpus_difficulty.rs  corpus_golden.rs  corpus_sgt_desc.rs  symmetry_tests.rs  z3_golden_verify.rs
kenken-uniffi/: Cargo.toml  README.md  build.rs
kenken-uniffi/src/: keen.udl  lib.rs
kenken-verify/: Cargo.toml  _CoqProject  dune-project
kenken-verify/rcoq/KenKen/: Core.v  Extraction.v  Integration.v  Search.v  Uniqueness.v
kenken-verify/src/: extract_verify.rs  lib.rs  sat_interface.rs  verified_solver.rs  z3_interface.rs
kenken-verify/translation/: mapping.md
scripts/: bolt.sh  build_targets.sh  distill_crate_docs.py  fetch_crate_docs.py  pgo.sh  profile_benchmarks.sh  profile_solver.sh  profile_tier22_scaling.sh
src/verify/: kani_grid_index.rs  z3_uniqueness.rs
