[workspace]
members = [
  "kenken-core",
  "kenken-gen",
  "kenken-io",
  "kenken-simd",
  "kenken-solver",
  "kenken-verify",
  "kenken-uniffi",
  "kenken-cli", "kenken-profile",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "GPL-2.0-only"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
smallvec = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-flame = "0.2"
fixedbitset = "0.5"
smallbitvec = "2.5"
criterion = { version = "0.5", default-features = false, features = ["rayon"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = 0
incremental = true
