[package]
name = "kenken-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
smallvec = "1"

[dependencies.kenken-core]
path = "../kenken-core"

[dependencies.kenken-solver]
path = "../kenken-solver"

# Fuzz targets

[[bin]]
name = "fuzz_sgt_desc_parser"
path = "fuzz_targets/fuzz_sgt_desc_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_solver"
path = "fuzz_targets/fuzz_solver.rs"
test = false
doc = false
bench = false
