[package]
name = "kenken-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
kenken-core = { path = "../kenken-core", features = ["core-u64"] }
kenken-solver = { path = "../kenken-solver" }
kenken-profile = { path = "../kenken-profile", optional = true }
smallvec.workspace = true
thiserror.workspace = true
mimalloc = { version = "0.1", optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
tracing-flame = { workspace = true, optional = true }

[features]
default = ["std", "telemetry-subscriber"]
std = []

# Placeholders
dev-tui = []
telemetry-tracing = []
bench-criterion = []
alloc-mimalloc = ["dep:mimalloc"]
telemetry-subscriber = ["dep:tracing-subscriber"]

# Profiling features
prof-flame = ["dep:tracing-flame", "dep:tracing-subscriber"]
prof-harness = ["dep:kenken-profile"]

# Domain support - pass-through to kenken-solver
solver-u128 = ["kenken-solver/solver-u128"]
solver-u256 = ["kenken-solver/solver-u256"]

[[bin]]
name = "profile_spans"
required-features = ["prof-flame"]
