[package]
name = "kenken-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
kenken-core = { path = "../kenken-core" }
kenken-solver = { path = "../kenken-solver" }
thiserror.workspace = true
rayon = { version = "1", optional = true }
rand.workspace = true
rand_chacha.workspace = true
smallvec.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = ["std"]
std = []

parallel-rayon = ["dep:rayon"]
gen-dlx = ["kenken-solver/solver-dlx"]
verify-sat = ["kenken-solver/sat-varisat"]

# Placeholders (wire to real deps once integrated)
rng-pcg = []
math-num-integer = []
math-fixed = []
cache-dashmap = []
telemetry-tracing = ["dep:tracing"]
