[package]
name = "kenken-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
kenken-core = { path = "../kenken-core" }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
likely_stable = { version = "0.1", optional = true }
bumpalo = { version = "3", optional = true, features = ["collections"] }
dlx_rs = { package = "dlx-rs", version = "1", optional = true }
varisat = { version = "0.2", optional = true }
smallvec.workspace = true

[features]
default = ["std", "tracing"]
std = []
tracing = ["dep:tracing"]
perf-likely = ["dep:likely_stable"]
alloc-bumpalo = ["dep:bumpalo"]
solver-dlx = ["dep:dlx_rs"]
sat-varisat = ["dep:varisat"]
