[package]
name = "kenken-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
kenken-core = { path = "../kenken-core" }
kenken-simd = { path = "../kenken-simd", optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
bumpalo = { version = "3", optional = true, features = ["collections"] }
varisat = { version = "0.2", optional = true }
z3 = { version = "0.12", optional = true }
fixedbitset = { workspace = true, optional = true }
smallbitvec = { workspace = true, optional = true }
smallvec.workspace = true
dhat = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = ["std", "tracing"]
std = []
tracing = ["dep:tracing"]
perf-likely = []
alloc-bumpalo = ["dep:bumpalo"]
solver-dlx = []
solver-u64 = ["kenken-core/core-u64"]
solver-u128 = ["simd-dispatch"]
solver-u256 = ["simd-dispatch"]
solver-bitdomain = ["kenken-core/core-bitvec"]
sat-varisat = ["dep:varisat"]
simd-dispatch = ["dep:kenken-simd"]
verify = ["dep:z3"]
solver-fixedbitset = ["dep:fixedbitset"]
solver-smallbitvec = ["dep:smallbitvec"]
dhat-heap = ["dep:dhat"]
lcv-heuristic = []
symmetry-breaking = []
nogood-learning = []
parallel-search = ["dep:rayon"]
opt-serial = ["symmetry-breaking", "nogood-learning"]
opt-all = ["symmetry-breaking", "nogood-learning", "parallel-search"]

[dev-dependencies]
criterion.workspace = true
pprof.workspace = true
proptest.workspace = true
kenken-core = { path = "../kenken-core" }
kenken-simd = { path = "../kenken-simd" }

[[bench]]
name = "solver_smoke"
harness = false

[[bench]]
name = "solver_scaling"
harness = false

[[bench]]
name = "simd_effectiveness"
harness = false

[[bench]]
name = "domain_repr"
harness = false

[[bench]]
name = "lcv_measurement"
harness = false

[[bench]]
name = "profile_flames"
harness = false
