[package]
name = "kenken-uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kenken-core = { path = "../kenken-core" }
kenken-gen = { path = "../kenken-gen", optional = true }
kenken-solver = { path = "../kenken-solver" }
thiserror.workspace = true
uniffi = "0.30"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[features]
default = ["std", "ffi-uniffi"]
std = []

ffi-uniffi = []
gen = ["dep:kenken-gen", "kenken-gen/gen-dlx"]
